--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
             <div id="post">
                 <h1>Este es el título interesante y atractivo del post</h1>
                 <p>Y este es el párrrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+                <p>
+                    Los blogs son la mejor forma de compartir información. Aunque también requieren de un cierto nivel de valentía y valor por parte del escritor. Me gustaría empezar a escribir y desarrollar mis habilidades
+                </p>
             </div>
         </div>
     </body>
