Ajuste del documento HTML a lo que estaba en el curso, adición del footer, y ajuste de estilo del footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,12 @@
                 <p>Y este es el párrrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
                 <p>
                     Los blogs son la mejor forma de compartir información. Aunque también requieren de un cierto nivel de valentía y valor por parte del escritor. Me gustaría empezar a escribir y desarrollar mis habilidades
+
                 </p>
+                <p>Subscríbete y dale like</p>
+            </div>
+            <div id="footer">
+                Hecho con amor en Platzi <3
             </div>
         </div>
     </body>
