--- a/blogpost.html
+++ b/blogpost.html
@@ -11,13 +11,13 @@
                 <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
-                <h1>Este es el título interesante y atractivo del post</h1>
-                <p>Y este es el párrrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+                <h1>Este es el t&iacute;tulo interesante y atractivo del post</h1>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
                 <p>
-                    Los blogs son la mejor forma de compartir información. Aunque también requieren de un cierto nivel de valentía y valor por parte del escritor. Me gustaría empezar a escribir y desarrollar mis habilidades
+                    Los blogs son la mejor forma de compartir informaci&oacute;n. Aunque también requieren de un cierto nivel de valentía y valor por parte del escritor. Me gustaría empezar a escribir y desarrollar mis habilidades
 
                 </p>
-                <p>Subscríbete y dale like</p>
+                <p>Subscr&iacute;bete y dale like</p>
             </div>
             <div id="footer">
                 Hecho con amor en Platzi <3
